--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "three": "^0.142.0",
